syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// options for Java generated sources
option java_multiple_files = true;
option java_package = "vn.elca.protobuf";
option java_outer_classname = "ProjectGrpcApi";

package sms.project;

message SearchRequest {
  string name = 1;
  string status = 2;
}

message SearchResponse {
  repeated GrpcProjectDto projects = 1;
}

message GetOneRequest {
  int64 id = 1;
}

message GrpcProjectDto {
  int64 id = 1;
  string name = 2;
  Date startDate = 3;
  Date endDate = 4;
  string customer = 5;
  int64 groupId = 6;
  int64 version = 7;
  int32 projectNumber = 8;
  string status = 9;
  string visaString = 10;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message ResponseUpdate {
  string message = 1;
  bool success = 2;
  repeated string visaList = 3;
  bool conflictProjectNumber = 4;
  bool isConcurrentUpdate = 5;
  bool invalidDates = 6;
}

message GrpcGroup {
  int64 id = 1;
  int64 version = 2;
}

message GrpcGroupList {
  repeated GrpcGroup groups = 1;
}

message DeleteOneRequest {
  int64 id = 1;
}

message DeleteMultipleRequest {
  repeated int64 ids = 1;
}

service ProjectService {
  rpc FindByNameAndStatus (SearchRequest) returns (SearchResponse);
  rpc GetOne (GetOneRequest) returns (GrpcProjectDto);
  rpc CreateProject (GrpcProjectDto) returns (ResponseUpdate);
  rpc GetGroups (google.protobuf.Empty) returns (GrpcGroupList);
  rpc UpdateProject (GrpcProjectDto) returns (ResponseUpdate);
  rpc deleteProject (DeleteOneRequest) returns (ResponseUpdate);
  rpc deleteProjectList (DeleteMultipleRequest) returns (ResponseUpdate);
}
